--- a/SpiralInteger/pom.xml
+++ b/SpiralInteger/pom.xml
@@ -1,34 +1,66 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.rallydev</groupId>
-  <artifactId>SpiralInteger</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<groupId>com.rallydev</groupId>
+	<artifactId>SpiralInteger</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>integer.spiral</name>
-  <url>http://maven.apache.org</url>
+	<name>SpiralInteger</name>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<developers>
+	    <developer>
+	      <id>kpburson</id>
+	      <name>Kendrick Burson</name>
+	      <email>kpburson@gmail.com</email>
+	      <organization>rallydev</organization>
+	      <organizationUrl>http://rallydev.com</organizationUrl>
+	      <roles>
+	        <role>developer</role>
+	      </roles>
+	      <timezone>-8</timezone>
+	    </developer>
+	  </developers>
 
-  <dependencies>
-    
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.10</version>
-      <scope>test</scope>
-    </dependency>
-    
-    <dependency>
-		<groupId>com.googlecode.matrix-toolkits-java</groupId>
-		<artifactId>mtj</artifactId>
-		<version>0.9.14</version>
-	</dependency>
-            
-  </dependencies>
+	  <scm>
+	    <connection>scm:git:https://github.com/kpburson/Labs.git</connection>
+	    <developerConnection>scm:https://github.com/kpburson/Labs.git</developerConnection>
+	    <tag>HEAD</tag>
+	    <url>https://github.com/kpburson/Labs.git</url>
+	  </scm>
+	  
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<build>
+		<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<configuration>
+				<source>1.6</source>
+				<target>1.6</target>
+			</configuration>
+		</plugin></plugins>
+	</build>
+
+	<dependencies>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.googlecode.matrix-toolkits-java</groupId>
+			<artifactId>mtj</artifactId>
+			<version>0.9.14</version>
+		</dependency>
+
+	</dependencies>
 
 </project>
