--- a/SpiralInteger/pom.xml
+++ b/SpiralInteger/pom.xml
@@ -4,46 +4,69 @@
 
 	<groupId>com.rallydev</groupId>
 	<artifactId>SpiralInteger</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<name>SpiralInteger</name>
 
 	<developers>
-	    <developer>
-	      <id>kpburson</id>
-	      <name>Kendrick Burson</name>
-	      <email>kpburson@gmail.com</email>
-	      <organization>rallydev</organization>
-	      <organizationUrl>http://rallydev.com</organizationUrl>
-	      <roles>
-	        <role>developer</role>
-	      </roles>
-	      <timezone>-8</timezone>
-	    </developer>
-	  </developers>
+		<developer>
+			<id>kpburson</id>
+			<name>Kendrick Burson</name>
+			<email>kpburson@gmail.com</email>
+			<organization>rallydev</organization>
+			<organizationUrl>http://rallydev.com</organizationUrl>
+			<roles>
+				<role>developer</role>
+			</roles>
+			<timezone>-8</timezone>
+		</developer>
+	</developers>
 
-	  <scm>
-	    <connection>scm:git:https://github.com/kpburson/Labs.git</connection>
-	    <developerConnection>scm:https://github.com/kpburson/Labs.git</developerConnection>
-	    <tag>HEAD</tag>
-	    <url>https://github.com/kpburson/Labs.git</url>
-	  </scm>
-	  
+	<scm>
+		<connection>scm:git:https://github.com/kpburson/Labs.git</connection>
+		<developerConnection>scm:https://github.com/kpburson/Labs.git</developerConnection>
+		<tag>HEAD</tag>
+		<url>https://github.com/kpburson/Labs.git</url>
+	</scm>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<build>
 		<plugins>
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-compiler-plugin</artifactId>
-			<configuration>
-				<source>1.6</source>
-				<target>1.6</target>
-			</configuration>
-		</plugin></plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<archive>
+						<manifest>
+							<mainClass>com.rallydev.SpiralInteger</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 	</build>
 
 	<dependencies>
